--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web API for Box.com downloader",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/aebibtech/boxdl_service#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-zip": "^3.0.0",
+    "puppeteer": "^19.11.1"
   }
 }
