--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       volumes:
         - ./src:/var/www/app/src
         - ./package.json:/var/www/app/package.json
+        - ./puppeteer.config.cjs:/var/www/app/puppeteer.config.cjs
       ports:
         - 3001:3000
         - 9229:9229
